# revgeo-cpp

./: .gitmodules  CMakeLists.txt  README.md  TODO
osm/: osm-import.sh
python/: getsegments.py  getsegments_test.py  gettiles.py
src/: RoadData.cpp  RoadData.h  SimpleMatcher.cpp  SimpleMatcher.h  main.cpp  platform.h
